[gd_scene load_steps=3 format=3 uid="uid://dvux5bnnygjk1"]

[ext_resource type="Script" uid="uid://co1vdbfd16clp" path="res://user_interface/screens/VictoryScreen.gd" id="1_hvxlt"]
[ext_resource type="Theme" uid="uid://d2mah8qfufk0b" path="res://user_interface/assets/UIMenuTheme.tres" id="2_g0g3c"]

[node name="VictoryScreen" type="VBoxContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -372.0
offset_right = 372.0
offset_bottom = 374.0
grow_horizontal = 2
script = ExtResource("1_hvxlt")

[node name="TitleLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme = ExtResource("2_g0g3c")
text = "VICTORY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MENU_ACTIONS" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="ContinueButton" type="Button" parent="MENU_ACTIONS"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_g0g3c")
text = "CONTINUE"

[node name="RestartButton" type="Button" parent="MENU_ACTIONS"]
layout_mode = 2
theme = ExtResource("2_g0g3c")
text = "RESTART"

[node name="MenuButton" type="Button" parent="MENU_ACTIONS"]
layout_mode = 2
theme = ExtResource("2_g0g3c")
text = "MENU"

[connection signal="pressed" from="MENU_ACTIONS/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MENU_ACTIONS/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MENU_ACTIONS/MenuButton" to="." method="_on_menu_button_pressed"]
